# PREML

./: .dockerignore  .gitignore  README.md  docker-compose.yml  main.py  package-lock.json  pyproject.toml  requirements.txt
.github/workflows/: docker-image.yml
App/: Dockerfile  package-lock.json  package.json  requirements.txt  tsconfig.node.json  vite.config.ts
App/backend/: Dockerfile  app.py  requirements.txt
App/backend/hscmap/: __init__.py  callback.py  channel.py  fitsimage.py  hook.py  polygon.py  selectablecatalog.py  snapshot.py  utils.py  window.py
App/backend/hscmap/labextension/: package.json
App/src/: App.tsx  index.css
App/src/components/: GalaxyDetails.tsx  RedshiftCalculator.tsx  SkyMap.tsx
App/src/utils/: hscmapComms.ts
app/: Dockerfile  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
app/backend/: Dockerfile  app.py  inference.py  requirements.txt
app/backend/hscmap/: catalog.py  channel.py  typecheck.py  window.py
app/src/: App.tsx  index.css
app/src/components/: GalaxyDetails.tsx  RedshiftCalculator.tsx  SkyMap.tsx
app/src/components/layout/: Layout.tsx
app/src/pages/: About.tsx  Dashboard.tsx  Dataset.tsx  Methodology.tsx  Publications.tsx
app/src/types/: index.ts
backend/: Dockerfile  app.py  main_network.onnx
backend/hscmap/: config.py  package.json
