[project]
name = "preml"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "addict==2.4.0",
    "annotated-types==0.7.0",
    "anyio==4.9.0",
    "appdirs==1.4.4",
    "astropy==7.1.0",
    "astropy-iers-data==0.2025.6.2.0.38.23",
    "asttokens==3.0.0",
    "blinker==1.9.0",
    "certifi==2025.4.26",
    "charset-normalizer==3.4.1",
    "click==8.1.8",
    "colorama==0.4.6",
    "coloredlogs==15.0.1",
    "colour==0.1.5",
    "contourpy==1.3.2",
    "cycler==0.12.1",
    "decorator==5.2.1",
    "diskcache==5.6.3",
    "dotenv==0.9.9",
    "executing==2.2.0",
    "fastapi==0.115.12",
    "flask==3.1.1",
    "flask-cors==6.0.0",
    "flatbuffers==25.2.10",
    "fonttools==4.57.0",
    "glcontext==3.0.0",
    "h11==0.16.0",
    "humanfriendly==10.0",
    "idna==3.10",
    "ipython==9.1.0",
    "ipython-pygments-lexers==1.1.1",
    "isosurfaces==0.1.2",
    "itsdangerous==2.2.0",
    "jedi==0.19.2",
    "jinja2==3.1.6",
    "kiwisolver==1.4.8",
    "line-profiler==4.2.0",
    "manimgl==1.7.2",
    "manimpango==0.6.0",
    "mapbox-earcut==1.0.3",
    "markdown-it-py==3.0.0",
    "markupsafe==3.0.2",
    "matplotlib==3.10.1",
    "matplotlib-inline==0.1.7",
    "mdurl==0.1.2",
    "moderngl==5.12.0",
    "moderngl-window==3.1.1",
    "mpmath==1.3.0",
    "numpy==2.2.4",
    "onnxruntime==1.21.1",
    "packaging==24.2",
    "pandas==2.3.0",
    "parso==0.8.4",
    "pexpect==4.9.0",
    "pillow==11.2.1",
    "prompt-toolkit==3.0.51",
    "protobuf==6.30.2",
    "ptyprocess==0.7.0",
    "pure-eval==0.2.3",
    "pydantic==2.11.3",
    "pydantic-core==2.33.1",
    "pydub==0.25.1",
    "pyerfa==2.0.1.5",
    "pyglet==2.1.3",
    "pyglm==2.8.2",
    "pygments==2.19.1",
    "pyopengl==3.1.9",
    "pyparsing==3.2.3",
    "pyperclip==1.9.0",
    "pyreadline3==3.5.4",
    "python-dateutil==2.9.0.post0",
    "python-dotenv==1.1.0",
    "pytz==2025.2",
    "pyyaml==6.0.2",
    "requests==2.32.3",
    "rich==14.0.0",
    "scipy==1.15.2",
    "screeninfo==0.8.1",
    "six==1.17.0",
    "skia-pathops==0.8.0.post2",
    "sniffio==1.3.1",
    "stack-data==0.6.3",
    "starlette==0.46.2",
    "svgelements==1.9.6",
    "sympy==1.13.3",
    "tqdm==4.67.1",
    "traitlets==5.14.3",
    "typing-extensions==4.13.2",
    "typing-inspection==0.4.0",
    "tzdata==2025.2",
    "urllib3==2.4.0",
    "uvicorn==0.34.2",
    "validators==0.34.0",
    "wcwidth==0.2.13",
    "werkzeug==3.1.3",
]
